--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,28 @@
     font-size: 1rem;
     font-weight: bold;
 }
+
+#load-more-button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #E04D59;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  #load-more-button:hover {
+    background-color: #BE414C;
+  }
+  
+  .spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
