--- a/css/standard.css
+++ b/css/standard.css
@@ -1,4 +1,3 @@
-/* Basisstile für die gesamte Seite */
 body {
   margin: 0;
   padding: 0;
@@ -21,16 +20,6 @@ h2 {
   font-size: 1.5rem;
 }
 
-/* Allgemeines Styling für Pokémon-Karten */
-.pokemon-card {
-  text-align: center;
-  padding: 20px;
-  border-radius: 10px;
-  margin: 10px;
-}
-
-/* Schriftfarbe und Buttons basierend auf Typ */
-/* Allgemeines Styling für Pokémon-Karten */
 .pokemon-card {
   text-align: center;
   padding: 15px;
@@ -39,28 +28,26 @@ h2 {
   background-color: #f8f8f8;
 }
 
-/* Schriftfarbe des Pokémon-Namens basierend auf Typ */
 .type-plant .pokemon-name {
-  color: #f8f8f8; /* Grün für Pflanze */
+  color: #f8f8f8;
 }
 
 .type-water .pokemon-name {
-  color: #f8f8f8; /* Blau für Wasser */
+  color: #f8f8f8;
 }
 
 .type-fire .pokemon-name {
-  color: #f8f8f8; /* Rot für Feuer */
+  color: #f8f8f8;
 }
 
 .type-electric .pokemon-name {
-  color: #f8f8f8; /* Gelb für Elektrizität */
+  color: #f8f8f8;
 }
 
 .type-rock .pokemon-name {
-  color: #f8f8f8; /* Grau für Gestein */
+  color: #f8f8f8;
 }
 
-/* Buttons für Kategorien */
 .category-buttons {
   display: flex;
   justify-content: center;
@@ -69,8 +56,8 @@ h2 {
 }
 
 .category-button {
-  background-color: transparent; /* Keine Hintergrundfarbe */
-  border: 2px solid currentColor; /* Rahmen in der Schriftfarbe */
+  background-color: transparent;
+  border: 2px solid currentColor;
   border-radius: 5px;
   padding: 5px 15px;
   font-weight: bold;
@@ -79,6 +66,6 @@ h2 {
 }
 
 .category-button:hover {
-  background-color: currentColor; /* Hintergrundfarbe entspricht der Schriftfarbe */
-  color: white; /* Schriftfarbe invertiert */
+  background-color: currentColor;
+  color: white;
 }
