--- a/css/assets.css
+++ b/css/assets.css
@@ -1,28 +1,3 @@
-.pokemon-card {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  border-radius: 10px;
-  color: #fff;
-  font-weight: 500;
-  text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  margin: 5px 0;
-}
-
-.pokemon-card:hover {
-  transform: scale(1.1);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-}
-
-.pokemon-card img {
-  width: 80px;
-  height: 80px;
-  margin-bottom: 10px;
-}
-
 .highlight {
   border: 5px solid #212529;
   border-radius: 10px;
@@ -41,8 +16,9 @@
 }
 
 .overlay-content {
-  width: 60%;
-  height: 70%;
+  width: auto;
+  height: auto;
+  margin-top: auto;
   border: 5px solid #212529;
   border-radius: 15px;
   display: flex;
@@ -210,4 +186,8 @@
 .evo-stage.current img {
   border-color: #1A8755;
   transform: scale(1.1);
+}
+
+.spinner-btn {
+  display: none;
 }
