--- a/css/assets.css
+++ b/css/assets.css
@@ -23,6 +23,9 @@
 }
 
 .overlay-content {
+  overflow-y: auto;
+  width: 500px;
+  height: 600px;
   background-color: #212529;
   position: relative;
   padding: 20px;
